--- a/views/index.pug
+++ b/views/index.pug
@@ -1,3 +1,5 @@
 extends layouts/layout
 block content
-  p Welcome to Hello
+   div
+      each book in books
+        img( width='100px', height='150px',src=book.coverImgpath)
