File Upload Setup

--- a/views/books/form_field.pug
+++ b/views/books/form_field.pug
@@ -19,7 +19,7 @@ div
     input(type="number" name="pageCount" min="1" value= book.pageCount )                
 div
     label(for="coverImg") Cover
-    input(type="file" name="cover")                
+    input(type="file" name="cover" class="filepond")                
 div
   label(for="description") Description
   textarea(name="description", book.description)    
