--- a/views/books/new.pug
+++ b/views/books/new.pug
@@ -2,7 +2,7 @@ extends ../layouts/layout
 block content
     h2 New Books
     include ../partials/errMess
-    form(action="/books" method="POST" enctype="multipart/form-data")
+    form(action="/books" method="POST" )
        include ./form_field
        a(href="/books") Cancel
        button(type="submit") Create
