--- a/views/authors/index.pug
+++ b/views/authors/index.pug
@@ -9,3 +9,7 @@ block content
   br
   each author in authors
     div= author.name
+    a(href='/authors/'+ author.id) View
+    a(href='/authors/'+author.id +'/edit') Edit
+    include ../partials/deleteForm  
+              
