--- a/views/authors/form_field.pug
+++ b/views/authors/form_field.pug
@@ -1,2 +1,3 @@
-label(for="name") Name
-input(type="text" name="name" value=author.name)
+.form-group
+   label(for="name", style='font-size: 30px;') Name
+   input.form-control(placeholder="Name", type="text" name="name" value=author.name)
