--- a/views/partials/deleteForm.pug
+++ b/views/partials/deleteForm.pug
@@ -1,2 +1,2 @@
 form(method="POST" action="/authors/" + author.id + "?_method=DELETE")
-       button(type='submit') Delete
+       button.btn.btn-danger(type='submit') Delete
