--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,12 +1,25 @@
-header
-  nav.header-nav
-    a.header-title(href='/') Mybrary
-    ul
-      li
-        a(href='/authors') Authors
-      li
-        a(href='/authors/new') Add Author
-      li
-        a(href='/books') Books
-      li
-        a(href='/books/new') Add Book
+header  
+ nav.navbar.navbar-default
+  .container
+    // Brand and toggle get grouped for better mobile display
+    .navbar-header
+      button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1', aria-expanded='false')
+        span.sr-only Toggle navigation
+        span.icon-bar
+        span.icon-bar
+        span.icon-bar
+      a.navbar-brand(href='/' style='padding:0px') 
+        img(src='https://png.pngtree.com/templates_detail/20180917/book-library-education-logo-png_32062.jpg' width='50')
+    // Collect the nav links, forms, and other content for toggling
+    #bs-example-navbar-collapse-1.collapse.navbar-collapse
+      ul.nav.navbar-nav.navbar-right
+        li
+          a(href='/authors') Authors
+        li
+          a(href='/authors/new') Add Author
+        li
+          a(href='/books') Books
+        li
+          a(href='/books/new') Add Book
+    // /.navbar-collapse
+  // /.container-fluid        
