--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,7 +16,7 @@ body {
 .btn_{
   position: absolute;
   top: 50%;
-  left: 79%;
+  left: 75%;
 }
 .name{
   display: inline-block;
@@ -103,10 +103,6 @@ body {
   font-size: 13px;
 }
 @media only screen and (min-width:240px) and (max-width:480px){
-  .title-search{
-    position: absolute;
-    left: 17%;
-  }
   .img-book{
     height: 230px;
     width: 160px;
@@ -128,6 +124,11 @@ body {
     display: flex;
     padding: 0;
     justify-content: flex-end;
+  }
+  .btn_{
+    position: absolute;
+    top: 50%;
+    left: 78%;
   }
   
 }
